search bar bug and building box on mobile bug fixed

--- a/public/css/buildings.css
+++ b/public/css/buildings.css
@@ -42,34 +42,34 @@
 }
 .green {
     color: #000c;
-    outline: 2px solid green;
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px green;
+    /* outline: 2px solid green; */
+    box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px green;
 }
 .green:hover {
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px green;
+    box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px green;
 }
 .green:active {
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px green;
+    box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px green;
 }
 .orange {
     color: #000c;
-    outline: 2px solid orange;
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px orange;
+    /* outline: 2px solid orange; */
+    box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px orange;
 }
 .orange:hover {
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px orange;
+    box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px orange;
 }
 .orange:active {
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px orange;
+    box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px orange;
 }
 .red {
     color: #000c;
-    outline: 2px solid red;
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px red;
+    /* outline: 2px solid red; */
+    box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px red;
 }
 .red:hover {
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px red;
+    box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px red;
 }
 .red:active {
-    box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px red;
+    box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px red;
 }
